--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" alt="">
+                    <img src="https://i.ibb.co/8m8gWpk/example-image.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Dora and I'm a <span class="typing-2"></span></div>
