--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Your text</div>
-                        <p>Your text.</p>
+                        <i class="fa-solid fa-people fa-beat-fade" style="color: #ff0000;"></i>
+                        <div class="text">Couple Counselling</div>
+                        <p>At just 110$ Per Session, You Can Get The Therapy You Need For This Category. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Your text</div>
-                        <p>Your text.</p>
+                        <i class="fa-solid fa-person fa-beat-fade" style="color: #ff0000;"></i>
+                        <div class="text">Grief, Stress, And Other Counselling</div>
+                        <p>At just 100$ Per Session Per Person, You Can Get The Therapy You Need Under These Categories</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Your text</div>
-                        <p>Your text.</p>
+                        <i class="fa-solid fa-computer fa-beat-fade" style="color: #ff0000;"></i>
+                        <div class="text">Online Counselling</div>
+                        <p>I Use Google Meet, The Online Tool That Just Makes Everything Easier, Bot For You, And For Me!</p>
                     </div>
                 </div>
                </div>
