--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fa-solid fa-people fa-beat-fade" style="color: #ff0000;"></i>
+                        <i class="fa-solid fa-people-simple fa-beat-fade" style="color: #ff0000;"></i>
                         <div class="text">Couple Counselling</div>
                         <p>At just 110$ Per Session, You Can Get The Therapy You Need For This Category. </p>
                     </div>
