--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
+                        <script src="https://kit.fontawesome.com/ded4debd0c.js" crossorigin="anonymous"></script>
+                        <script src="https://kit.fontawesome.com/ded4debd0c.js" crossorigin="anonymous"></script>
+                        <script src="https://kit.fontawesome.com/ded4debd0c.js" crossorigin="anonymous"></script>
                         <i class="fa-solid fa-people-simple fa-beat-fade" style="color: #ff0000;"></i>
                         <div class="text">Couple Counselling</div>
                         <p>At just 110$ Per Session, You Can Get The Therapy You Need For This Category. </p>
