--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">My Skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">Your text.</div>
+                    <div class="text">I am a certified district counsellor in Canada. I work with students, clients and more. I usually work through google meet as it works best for both the client and me. I have a lot of counselling related skills including; Couple Counselling, Grief Counselling, Depression Counselling, etc. I have a lot of experience and I'm offering you guys some cheap counselling solutions. </div>
                     <p>I Your text</p>
-                    <a href="#">Scroll to learn more about me!</a>
+                    <a href="#">Press Here To Go Back Up</a>
                 </div>
                         </div>
                         <div class="line mysql"></div>
