--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </section>
 
     <footer>
-        </span> Created By Dora | copyright © 2023 All rights reserved.</span>
+        </span> Created By Dora | Copyright © 2023 All Rights Reserved.</span>
     </footer>
 
     <script src="script.js"></script>
