--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     
 </head>
+<script id="ratufa_loader" src="https://www.ratufa.io/c/ld.js?f=w3ax89hd&n=n1.ratufa.io"></script>
 <body>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
