--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <button onclick="window.location.href='getincontact.html'">Get in Contact</button>
+                     <a href="getincontact.html">Wondering How To Contact Me? Click Here or Email Me!</a>
 
                         </div>
                     </form>
