--- a/index.html
+++ b/index.html
@@ -182,8 +182,11 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                     <a href="getincontact.html">Wondering How To Contact Me? Click Here or Email Me!</a>
-
+                     
+                    <div class="button-area">
+                        <a href "getincontact.html">
+                            <button type="submit">Send message</button>
+                        </a>
                         </div>
                     </form>
                 </div>
