--- a/index.html
+++ b/index.html
@@ -180,28 +180,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="column right">
-                    <div class="text">Message me</div>
-                    <form action="process_form.php" method="post">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
-                            </div>
+                    <div class="column right">
+                       <div class="text">Message me</div>
+                             <form action="process_form.php" method="post">
+                               <div class="fields">
+                               <div class="field name">
+                               <input type="text" name="name" placeholder="Name" required>
+                              </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="button-area">
-                            <button type="submit">Send message</button>
-                        </div>
-                    </form>
-                </div>
+                          <input type="email" name="email" placeholder="Email" required>
+                       </div>
+                    </div>
+                 <div class="field">
+            <input type="text" name="subject" placeholder="Subject" required>
+                 </div>
+                     <div class="field textarea">
+                         <textarea name="message" cols="30" rows="10" placeholder="Message.." required></textarea>
+                 </div>
+                          <div class="button-area">
+                    <button type="submit" name="submit">Send message</button>
+            <button onclick="window.location.href='getincontact.html'">Get in Contact</button>
+        </div>
+    </form>
+</div>
+
             </div>
         </div>
     </section>
