--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                     </div>
                 </div>
                     <div class="column right">
-                       <div class="text">Message me</div>
+                       <div class="text">Message Me</div>
+                        <div class="text">If You Want To Start Doing Sessions With Me, Please State A Good Time For Me To Call You & Your Phone Number For Easier Rescheduling.</div>
                              <form action="process_form.php" method="post">
                                <div class="fields">
                                <div class="field name">
