--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </section>
 
     <footer>
-        </span> Created Your Name | copyright © 2023 All rights reserved.</span>
+        </span> Created By The DRCOUNSELLING Team | Copyright © 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
