--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="box">
                         <i class="fa-solid fa-computer fa-beat-fade" style="color: #ff0000;"></i>
                         <div class="text">Online Counselling</div>
-                        <p>I Use Google Meet, The Online Tool That Just Makes Everything Easier, Bot For You, And For Me!</p>
+                        <p>I Use Google Meet, The Online Tool That Just Makes Everything Easier, For You, And For Me!</p>
                     </div>
                 </div>
                </div>
