--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://i.ibb.co/fQdX3HZ/example-image-2.jpg" alt="">
+                        <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" alt="">
                         <div class="text">Anthony Nigro</div>
                         <p>Head Secretary & Web Enginner/Web Developer</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://i.ibb.co/q9Yyk0r/example-image-3.jpg" alt="">
+                        <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" alt="">
                         <div class="text">Amos Nigro</div>
                         <p>Client Head Of Support, Secretery</p>
                     </div>
