--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="column right">
                        <div class="text">Message Me</div>
                         <div class="text">If You Want To Start Doing Sessions With Me, Please State A Good Time For Me To Call You & Your Phone Number For Easier Rescheduling.</div>
-                             <form action="process_form.php" method="post">
+                             <form name="contact" netlify>
                                <div class="fields">
                                <div class="field name">
                                <input type="text" name="name" placeholder="Name" required>
