--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
                     <div class="column right">
                        <div class="text">Message Me</div>
-                        <div class="text">If You Want To Start Doing Sessions With Me, Please State A Good Time For Me To Call You & Your Phone Number For Easier Rescheduling.</div>
+                        <div class="text">If You Want To Start Doing Sessions With Me, Please State A Good Time For Me To Call You & Your Phone Number For Easier Rescheduling. !DISCLAIMER! IF YOU SUBMITTED A FORM IN THE LAST WEEK PLEASE RE SUBMIT IT.</div>
                              <form name="contact" netlify>
                                <div class="fields">
                                <div class="field name">
